# MiniCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tree.xml
.github/workflows/: ci.yml  gh-pages.yml  release.yml
LexAnalyze/: lexAnalyze.cpp  lexAnalyze.h  test.txt
Parser/: Parase.sln  README.md  test.err  test.pro
Parser/Parase/: Parase.vcxproj  Parase.vcxproj.filters  paraser.cpp  paraser.h
PreCompiler/: 1.h  1.txt  2.c  preCompiler.cpp
Scanner/: Scanner.sln  test.dyd  test.pas
Scanner/Scanner/: Scanner.vcxproj  Scanner.vcxproj.filters  lexAnalyze.cpp  lexAnalyze.h
Syntaxer/: Syntaxer.sln
Syntaxer/Syntaxer/: Syntaxer.vcxproj  syntaxAnalyze.cpp  syntaxAnalyze.h
docs/: index.html  language_spec.md  playground.html  wasm-build.md
examples/: README.md  factorial.pas  gcd.pas  hello.pas  power.pas  sieve.pas  sort.pas
fuzz/: fuzz_lexer.cpp  fuzz_parser.cpp
src/ast/: ast.cpp  ast.h  ast_print.cpp  ast_print.h
src/driver/: main.cpp
src/ir/: semantic.cpp  semantic.h  three_addr.cpp  three_addr.h
src/lexer_pascal/: lex_pascal.cpp  lex_pascal.h
src/parser/: parser.cpp  parser.h
src/symtable/: symtable.h
src/vm/: vm.cpp  vm.h
tests/: examples_test.cpp  ir_test.cpp  lexer_test.cpp  parser_test.cpp  vm_test.cpp
tests/golden/: hello.expected.xml
